[gd_scene load_steps=6 format=2]

[ext_resource path="res://Platform.gd" type="Script" id=1]
[ext_resource path="res://Assets/dirtHalf.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 36.6736, 15.283 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 31.7011, 37.3573 )

[sub_resource type="Animation" id=3]

resource_name = "heat up"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.9375, 0, 0, 1 ) ]
}

[node name="Platform" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "collision" ]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="0"]

position = Vector2( 35.2434, 19.7397 )
rect = Rect2( -40, -200, 80, 400 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 36.102, 17.5588 )
shape = SubResource( 1 )
one_way_collision = true
_sections_unfolded = [ "Transform" ]

[node name="Area2D" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 35.9821, -23.8621 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
"anims/heat up" = SubResource( 3 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Sprite" type="Sprite" parent="." index="5"]

position = Vector2( 1.19748, 2.39494 )
z_index = 1
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Visibility" ]

[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


